add: Criação de Repositories, Controllers e DTOs